# rewind-viewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  emscripten_toolchain.cmake
.github/workflows/: linux_build.yml  macos_build.yml  windows_build.yml
clients/: README.md
clients/cpp/: RewindClient.h  main.cpp
clients/cpp/rewind_viewer/: RewindClient.h  colors.h  plot.h  responses.h  rewind_client.h  tcp_client.h  utils.h
clients/cpp/rewind_viewer/messages/: rewind_event.fbs.h  rewind_message.fbs.h  ui.fbs.h
clients/cpp_cmake/: CMakeLists.txt  main.cpp
clients/cpp_cmake/clsocket/: CMakeLists.txt
clients/cpp_cmake/flatbuffers/: CMakeLists.txt
clients/cpp_cmake/include/rewind_viewer/messages/: rewind_message.fbs.h
clients/cpp_cmake/rewind_viewer/: CMakeLists.txt
clients/cpp_cmake/rewind_viewer/include/rewind_viewer/: RewindClient.h  plot.h  rewind_client.h
clients/cpp_cmake/rewind_viewer/include/rewind_viewer/messages/: actions.fbs.h  rewind_event.fbs.h  rewind_message.fbs.h  ui.fbs.h
clients/csharp/: RewindClient.cs
clients/csharp/messages/rewind_viewer/fbs/: ActionEvent.cs  ActionInput.cs  ActionValue.cs  Arc.cs  BoolInput.cs  BoolValue.cs  ButtonInput.cs  CameraView.cs  Circle.cs  CircleSegment.cs  Color.cs  ColorPoint.cs  Command.cs  CreateAction.cs  DrawProto.cs  EndFrame.cs  EndProto.cs  FloatInput.cs  FloatValue.cs  IntInput.cs  IntValue.cs  KeyEvent.cs  Layer.cs  LayerOrigin.cs  LogText.cs  Map.cs  MousePath.cs  Options.cs  Polyline.cs  Popup.cs  PopupRound.cs  PrimitiveIndices.cs  PrimitiveStorage.cs  Primitives.cs  ReadEvents.cs  Rectangle.cs  RemoveAction.cs  RewindEvent.cs  RewindEventList.cs  RewindMessage.cs  (+10 more)
clients/go/: rewind_client.go
clients/go/messages/rewind_viewer/fbs/: ActionEvent.go  ActionInput.go  ActionValue.go  Arc.go  BoolInput.go  BoolValue.go  ButtonInput.go  CameraView.go  Circle.go  CircleSegment.go  Color.go  ColorPoint.go  Command.go  CreateAction.go  DrawProto.go  EndFrame.go  EndProto.go  FloatInput.go  FloatValue.go  IntInput.go  IntValue.go  KeyEvent.go  Layer.go  LayerOrigin.go  LogText.go  Map.go  MousePath.go  Options.go  Polyline.go  Popup.go  PopupRound.go  PrimitiveIndices.go  PrimitiveStorage.go  Primitives.go  ReadEvents.go  Rectangle.go  RemoveAction.go  RewindEvent.go  RewindEventList.go  RewindMessage.go  (+10 more)
clients/java/: RewindClient.java
clients/java/messages/rewind_viewer/fbs/: ActionValue.java  Arc.java  ArcT.java  BoolValue.java  CameraViewT.java  Circle.java  CircleSegment.java  CircleSegmentT.java  ColorPoint.java  Command.java  CommandUnion.java  CreateAction.java  DrawProto.java  EndFrameT.java  EndProto.java  FloatInput.java  FloatValue.java  IntInput.java  IntValue.java  KeyEvent.java  Layer.java  LogText.java  Map.java  (+24 more)
clients/kotlin/: RewindClient.kt
clients/python/: main.py  requirements.txt
clients/python/rewind_viewer/: client.py  client_json.py  colors.py
clients/python/rewind_viewer/fbs/: Arc.py  CameraView.py  Circle.py  CircleSegment.py  Color.py  Command.py  EndFrame.py  Layer.py  LogText.py  Map.py  Options.py  Polyline.py  Popup.py  PopupRound.py  Rectangle.py  RewindMessage.py  Tiles.py  Triangle.py  Vector2f.py
clients/rust/: rewind_client.rs
clients/rust/messages/: actions.fbs.rs  auxiliary.fbs.rs  events.fbs.rs  primitives.fbs.rs  rewind_event.fbs.rs  rewind_message.fbs.rs  ui.fbs.rs  vector2f.fbs.rs
clients/typescript/: rewind-client.ts
clients/typescript/messages/rewind-viewer/: fbs.ts
fbs/: CMakeLists.txt  actions.fbs  auxiliary.fbs  primitives.fbs  rewind_event.fbs  rewind_message.fbs  ui.fbs  vector2f.fbs
proto/: CMakeLists.txt  rewind_messages.proto
resources/shaders/: color_circle.frag  color_circle.geom  color_circle.vert  color_pass.frag  color_pass_projection.vert  model_view_projection.vert  simple_projection.vert  uniform_color_circle.frag  uniform_color_circle.geom  uniform_color_circle.vert
src/: CMakeLists.txt  main.cpp  rewind_viewer.cpp  rewind_viewer.h  version.h
src/cgutils/: Shader.cpp
src/common/: Spinlock.cpp  lock.h  lock_dictionary.h  lock_vector.h  logger.h  utils.h
src/gateway/: actions.h  client_gateway.cpp  client_gateway.h  events.h  file_gateway.h  gateway.h  lock_dictionary.h  tcp_server.cpp  tcp_server.h
src/gateway/handlers/: abstract.h  flatbuffers.h  json.h
src/gateway/messages/: auxiliary.fbs.h  events.fbs.h  primitives.fbs.h  rewind_event.fbs.h
src/gateway/transport/: dump_reader.cpp  dump_reader.h  tcp_server.cpp  tcp_server.h  transport.h
src/gl/: models.h  opengl.h  primitives_collection.cpp  primitives_collection.h  render_context.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  shaders_collection.h  utils.h
src/models/: Popup.cpp  Popup.h  camera.cpp  camera.h  config.h  film.h  frame.cpp  frame.h  frame_editor.cpp  frame_editor.h  frames_sequence.cpp  frames_sequence.h  popup.cpp  scene.cpp  scene.h  scene_editor.cpp  scene_editor.h  text.h
src/net/: MessageHandler.cpp  MessageHandler.h  NetListener.cpp  NetListener.h  PrimitiveType.cpp  PrimitiveType.h  ProtoHandler.cpp  ProtoHandler.h  events.h  rewind_server.cpp  rewind_server.h  tcp_server.cpp  tcp_server.h
src/net/flatbuffers/: FlatBuffersHandler.cpp  FlatBuffersHandler.h
src/net/flatbuffers/messages/: rewind_message.fbs.h
src/net/json_handler/: JsonHandler.cpp
src/net/messages/: rewind_message.fbs.h  vector2f.fbs.h
src/net/proto_buf/: ProtoBufHandler.cpp  ProtoBufHandler.h  messages.pb.cc  messages.pb.h  messages.proto
src/render/: RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  shaders_collection.h
src/ui/: control_pad.cpp  control_pad.h  main_menu.cpp  main_menu.h  playback_controls.cpp  playback_controls.h  state.h  status_overlay.cpp  status_overlay.h  style_manager.cpp  style_manager.h  toolbox_panel.cpp  toolbox_panel.h  viewport.cpp  viewport.h
src/viewer/: Config.cpp  Config.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  UIController.cpp  UIController.h
(+105 files in other folders)
